RECIPIENT LIST: Add third approval application